--- a/index.html
+++ b/index.html
@@ -60,17 +60,18 @@
         <div class="home-content">
             <h3>CodeCore</h3>
             <h1 class="text-degrade">Criação de Apps web mobile e Websites</h1>
-            <h4>Nossa missão</h4>
+            <h4>Quem somos</h4>
             <p>
-              Nossa missão é transformar ideias em experiências digitais excepcionais, desenvolvendo aplicativos web, mobile e websites com foco em inovação, desempenho e usabilidade. Unimos criatividade e tecnologia para ajudar empresas e empreendedores a se destacarem no mundo digital.
+              Na CodeCore, somos especialistas em desenvolvimento web e mobile, combinando design de alto nível com soluções tecnológicas modernas. Ajudamos programadores, profissionais autônomos e empresas a construir sua presença digital com eficiência, performance e elegância.
             </p>
-            <p>
+            <p class="p-2">
               Continuamos evoluindo com cada projeto, aprendendo e aprimorando para entregar soluções cada vez melhores.
             </p>
-            
-            <div class="btns">
-              <a href="#inscrever-se" class="btn piscando">Serviços<i class='bx bx-list-ul'  ></i> </a>
-            </div>
+
+            <a href="#formacoes">
+              <p class="title">Portfólio</p>
+              <p class="number">3</p>
+            </a>
         </div>
     
         <div class="foto-perfil">
