--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                       <img src="img/react.jpeg" alt="photoshop">
                   </p>
                   <div id="suporte">
-                      <h4>React JS<i class='bx bx-code-curly'></i></h4>
+                      <h4>Designer UI-UX<i class='bx bx-code-curly'></i></h4>
                       <p>
-                        Aprenda de forma simples, rápida e prática a usar React com Hooks e Redux para suas aplicações web.
+                        Criação de interfaces modernas, intuitivas e responsivas. O foco é na experiência do usuário (UX) e na estética (UI), com protótipos navegáveis, testes de usabilidade e versões para mobile e desktop.
                       </p>
                   </div>
 
@@ -221,9 +221,9 @@
                     <img src="img/laravel.jpg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Laravel<i class='bx bx-code-curly'></i></h4>
+                    <h4>Identidade Visual<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Domine Laravel e PHP do zero até conceitos avançados como Eloquent, Relacionamentos, Filas e etc.
+                      Desenvolvimento de logotipo, paleta de cores, tipografia e guias de uso visual para garantir uma imagem de marca profissional, consistente e reconhecível no ambiente digital.
                     </p>
                 </div>
 
@@ -255,9 +255,9 @@
                     <img src="img/ubuntu.jpg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Ubuntu<i class='bx bx-code-curly'></i></h4>
+                    <h4>Portfólio Dev<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Aprenda a implementar e administrar os principais Servidores de Rede com Ubuntu Server.
+                      Sites personalizados que destacam projetos, habilidades técnicas, certificados e integração com GitHub/LinkedIn. Ideal para profissionais de tecnologia que querem se posicionar com autoridade.
                     </p>
                 </div>
 
@@ -288,9 +288,9 @@
                     <img src="img/java.jpg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Java<i class='bx bx-code-curly'></i></h4>
+                    <h4>Portfólio PJ<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Curso mais didático e completo de Java e OO, UML, JDBC, JavaFX, Spring Boot, JPA, Hibernate, MySQL, MongoDB e muito mais.
+                      Desenvolvimento de sites pessoais voltados a freelancers e prestadores de serviços PJ (jurídicos, consultores, criativos), com foco em autoridade e captação de clientes.
                     </p>
                 </div>
 
