Update button text to 'Proposta Comércial'
Changed the button label from 'Assistir agora' to 'Proposta Comércial' for the Udemy course link to better reflect its purpose.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
                     US$ 13,99
                 </div>
-                <a target="_blank" href="https://www.udemy.com/course/ubuntu-server-administrando-servidores-linux/?couponCode=JUST4U02223" class="selecionar-pacote"><p >Assistir agora<i class='bx bxl-youtube' style='color:#ffffff' ></i></p></a>
+                <a target="_blank" href="https://www.udemy.com/course/ubuntu-server-administrando-servidores-linux/?couponCode=JUST4U02223" class="selecionar-pacote"><p >Proposta Comércial<i class='bx bxl-youtube' style='color:#ffffff' ></i></p></a>
             </div>
            </div>
 
