Atualiza serviços e estilos visuais do site
Atualiza títulos e descrições dos serviços em index.html para refletir ofertas mais comerciais e detalhadas. Ajusta o CSS para melhorar o visual, incluindo alteração de cor, sombra e remoção de borda em .serviços, além de adicionar a variável --color10.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       <img src="img/react.jpeg" alt="photoshop">
                   </p>
                   <div id="suporte">
-                      <h4>Designer UI-UX<i class='bx bx-code-curly'></i></h4>
+                      <h4>Designer web <i class='bx bx-code-curly'></i></h4>
                       <p>
                         Criação de interfaces modernas, intuitivas e responsivas. O foco é na experiência do usuário (UX) e na estética (UI), com protótipos navegáveis, testes de usabilidade e versões para mobile e desktop.
                       </p>
@@ -255,7 +255,7 @@
                     <img src="img/ubuntu.jpg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Portfólio Dev<i class='bx bx-code-curly'></i></h4>
+                    <h4>Portfólio dev<i class='bx bx-code-curly'></i></h4>
                     <p>
                       Sites personalizados que destacam projetos, habilidades técnicas, certificados e integração com GitHub/LinkedIn. Ideal para profissionais de tecnologia que querem se posicionar com autoridade.
                     </p>
@@ -321,9 +321,9 @@
                     <img src="img/python.png" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Python<i class='bx bx-code-curly'></i></h4>
+                    <h4>Landing Pages<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Do Básico à Programação Orientada a Objeto, Análise de Dados e Machine Learning com Projetos Práticos.
+                      Páginas únicas, altamente otimizadas para conversão (vendas, leads, cadastro). Ideal para campanhas de marketing, lançamentos de produtos ou captação de contatos.
                     </p>
                 </div>
 
@@ -354,9 +354,9 @@
                     <img src="img/vue.jpeg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Vue JS<i class='bx bx-code-curly'></i></h4>
+                    <h4>Sistemas Sob Medida<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Domine o framework JavaScript Front-end que combina o melhor do React e o melhor do Angular
+                      Soluções desenvolvidas do zero para atender necessidades específicas do cliente, como CRMs, ERPs, sistemas de agendamento, controle de estoque, entre outros. Inclui painel de administração e integrações personalizadas
                     </p>
                 </div>
 
@@ -387,9 +387,9 @@
                     <img src="img/angular.jpeg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Angular JS<i class='bx bx-code-curly'></i></h4>
+                    <h4>Website Simples<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Formação Angular Básico ao Avançado, coloque suas habilidades Angular em ação com este mergulho abrangente no Angular.
+                      Site com até 5 páginas (Home, Sobre, Serviços, Contato, Política), focados em presença digital básica. Inclui formulário de contato e versão mobile.
                     </p>
                 </div>
 
@@ -420,9 +420,9 @@
                     <img src="img/dart.png" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Flutter<i class='bx bx-code-curly'></i></h4>
+                    <h4>Website Avançado<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Um Curso Completo Para Aprender Google Flutter e Dart Para a Construção de Apps Nativas Para iOS e Android.
+                      Site completos, com diversas páginas, animações, recursos interativos, integração com redes sociais, blogs, analytics, formulários e otimização SEO.
                     </p>
                 </div>
 
@@ -453,12 +453,11 @@
                     <img src="img/mongodb.jpg" alt="photoshop">
                 </p>
                 <div id="suporte">
-                    <h4>Mongo DB<i class='bx bx-code-curly'></i></h4>
+                    <h4>Website E-commerce<i class='bx bx-code-curly'></i></h4>
                     <p>
-                      Aprenda tudo sobre MongoDB, NoSQL e Mongoose, do básico ao avançado e criando projetos práticos.
+                      Loja virtual com catálogo de produtos, carrinho de compras, integração com gateways de pagamento (Multicaixa, PayPal, Stripe), gestão de estoque e notificações. Totalmente adaptável a desktop e mobile.
                     </p>
                 </div>
-
                 
                 <div class="final-serv">
                 
